[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-helpers"
version = "0.0.97"
description = "A short description of your package"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/jamesBaker361/helpful"
